--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "zsh/.oh-my-zsh/custom/hyperzsh"]
-	path = zsh/.oh-my-zsh/custom/hyperzsh
+[submodule "modules/hyperzsh"]
+	path = modules/hyperzsh
 	url = https://github.com/tylerreckart/hyperzsh.git
-[submodule "zsh/.oh-my-zsh/custom/plugins/zsh-syntax-highlighting"]
-	path = zsh/.oh-my-zsh/custom/plugins/zsh-syntax-highlighting
+[submodule "modules/zsh-syntax-highlighting"]
+	path = modules/sh-syntax-highlighting
 	url = https://github.com/zsh-users/zsh-syntax-highlighting.git
