--- a/.gitmodules
+++ b/.gitmodules
@@ -7,6 +7,6 @@
 [submodule "modules/vim-plug"]
 	path = modules/vim-plug
 	url = https://github.com/junegunn/vim-plug.git
-[submodule "spacemacs/.emacs.d"]
-	path = spacemacs/.emacs.d
-	url = https://github.com/syl20bnr/spacemacs
+[submodule "modules/oh-my-zsh"]
+	path = modules/oh-my-zsh
+	url = https://github.com/robbyrussell/oh-my-zsh.git
