--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -14,7 +14,7 @@ set $down j
 set $up k
 set $right l
 # Your preferred terminal emulator
-set $term termite
+set $term gnome-terminal
 # Your preferred application launcher
 set $menu dmenu_run
 
@@ -45,8 +45,10 @@ output * bg /usr/share/sway/Sway_Wallpaper_Blue_1920x1080.png fill
 # Read `man 5 sway-input` for more information about this section.
 
 input "1739:30381:DLL0665:01_06CB:76AD_To" {
-    natural_scroll enabled
-#    middle_emulation enabled
+       dwt enabled
+       tap enabled
+       natural_scroll enabled
+       middle_emulation enabled
 }
 
 #[
@@ -227,8 +229,9 @@ bindsym $mod+r mode "resize"
 bar {
     position top
     colors {
+        status_command i3status
         statusline #ffffff
-        background #000000
+        background #323232
         inactive_workspace #32323200 #32323200 #5c5c5c
     }
 }
@@ -242,4 +245,8 @@ bar {
 # include ~/.config/sway/`hostname`/*
 
 new_window none
-
+bindsym XF86AudioRaiseVolume exec pamixer -i 5
+bindsym XF86AudioLowerVolume exec pamixer -d 5
+bindsym XF86AudioMute exec pamixer -t
+bindsym XF86MonBrightnessDown exec light -U 5
+bindsym XF86MonBrightnessUp exec light -A 5
