--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -227,9 +227,9 @@ bindsym $mod+r mode "resize"
 #
 # Read `man 5 sway-bar` for more information about this section.
 bar {
+    status_command i3status | status.py
     position top
     colors {
-        status_command i3status
         statusline #ffffff
         background #323232
         inactive_workspace #32323200 #32323200 #5c5c5c
