--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -14,14 +14,14 @@ set $down j
 set $up k
 set $right l
 # Your preferred terminal emulator
-set $term gnome-terminal
+set $term urxvt
 # Your preferred application launcher
-set $menu dmenu_run
+set $menu j4-dmenu-desktop
 
 ### Output configuration
 #
 # Default wallpaper (more resolutions are available in /usr/share/sway/)
-output * bg /usr/share/sway/Sway_Wallpaper_Blue_1920x1080.png fill
+output * bg $(wallpaper) fill
 #
 # Example configuration:
 #
@@ -229,6 +229,7 @@ bindsym $mod+r mode "resize"
 bar {
     status_command i3status | status.py
     position top
+    font pango:Roboto Mono 12
     colors {
         statusline #ffffff
         background #323232
@@ -245,6 +246,8 @@ bar {
 # include ~/.config/sway/`hostname`/*
 
 new_window none
+gaps inner 10
+
 bindsym XF86AudioRaiseVolume exec pamixer -i 5
 bindsym XF86AudioLowerVolume exec pamixer -d 5
 bindsym XF86AudioMute exec pamixer -t
