--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -16,7 +16,7 @@ set $right l
 # Your preferred terminal emulator
 set $term urxvt
 # Your preferred application launcher
-set $menu j4-dmenu-desktop
+set $menu j4-dmenu-desktop --dmenu="dmenu -i -fn 'Roboto 12' -l 7" 
 
 ### Output configuration
 #
@@ -245,8 +245,7 @@ bar {
 #
 # include ~/.config/sway/`hostname`/*
 
-new_window none
-gaps inner 10
+new_window pixel 1
 
 bindsym XF86AudioRaiseVolume exec pamixer -i 5
 bindsym XF86AudioLowerVolume exec pamixer -d 5
