--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,12 @@
-[submodule "modules/vim-plug"]
-	path = modules/vim-plug
-	url = https://github.com/junegunn/vim-plug.git
 [submodule "modules/zsh-syntax-highlighting"]
 	path = modules/zsh-syntax-highlighting
 	url = https://github.com/zsh-users/zsh-syntax-highlighting.git
+[submodule "modules/vim-pathogen"]
+	path = modules/vim-pathogen
+	url = https://github.com/tpope/vim-pathogen.git
+[submodule "modules/vim-sensible"]
+	path = modules/vim-sensible
+	url = https://github.com/tpope/vim-sensible.git
+[submodule "modules/vim-colors-solarized"]
+	path = modules/vim-colors-solarized
+	url = https://github.com/altercation/vim-colors-solarized.git
