--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
-[submodule "modules/zsh-syntax-highlighting"]
-	path = zsh/.oh-my-zsh/custom/plugins/zsh-syntax-highlighting
-	url = https://github.com/zsh-users/zsh-syntax-highlighting.git
 [submodule "modules/vim-sensible"]
 	path = vim/.vim/pack/my-plugins/start/vim-sensible
 	url = https://github.com/tpope/vim-sensible.git
 [submodule "modules/vim-colors-solarized"]
 	path = vim/.vim/pack/my-plugins/start/vim-colors-solarized
 	url = https://github.com/altercation/vim-colors-solarized.git
+[submodule "zsh/.antigen"]
+	path = zsh/.antigen
+	url = https://github.com/zsh-users/antigen.git
