--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "vim/.vim/pack/my-plugins/opt/nerdtree"]
 	path = vim/.vim/pack/my-plugins/opt/nerdtree
 	url = https://github.com/scrooloose/nerdtree.git
+[submodule "vim\\.vim\\pack\\my-plugins\\opt\\vim-jsx"]
+	path = vim\\.vim\\pack\\my-plugins\\opt\\vim-jsx
+	url = https://github.com/mxw/vim-jsx.git
