--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "vim\\.vim\\pack\\my-plugins\\opt\\vim-jsx"]
 	path = vim\\.vim\\pack\\my-plugins\\opt\\vim-jsx
 	url = https://github.com/mxw/vim-jsx.git
+[submodule "vim\\.vim\\pack\\my-plugins\\start\\oceanic-next"]
+	path = vim\\.vim\\pack\\my-plugins\\start\\oceanic-next
+	url = https://github.com/mhartington/oceanic-next.git
