--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "vim\\.vim\\pack\\my-plugins\\start\\oceanic-next"]
 	path = vim\\.vim\\pack\\my-plugins\\start\\oceanic-next
 	url = https://github.com/mhartington/oceanic-next.git
+[submodule "vim\\.vim\\pack\\my-plugins\\start\\vim-airline"]
+	path = vim\\.vim\\pack\\my-plugins\\start\\vim-airline
+	url = https://github.com/vim-airline/vim-airline.git
